--- a/src/app/components/contact/Form/form.module.css
+++ b/src/app/components/contact/Form/form.module.css
@@ -156,6 +156,7 @@
     font-family:'Exo', sans-serif;
     font-size: 1.4rem;
     font-weight: 500;
+    color: #000;
   }
   .ContactForm_form__eNij0 {
     grid-column: span 4;
