--- a/src/app/components/About/DataSlider/dataslider.module.css
+++ b/src/app/components/About/DataSlider/dataslider.module.css
@@ -186,7 +186,7 @@
   .DataSlider_container__vlQEj
     .DataSlider_carouselButtonWrapper__QaF4A
     .DataSlider_emblabutton__6rjJ0:hover {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .DataSlider_container__vlQEj
     .DataSlider_carouselButtonWrapper__QaF4A
@@ -1491,7 +1491,7 @@
     .DataSlider_item-3__9t1Om
     .DataSlider_innerWrapper__n2vOl
     .DataSlider_item_icon__RiXS4 {
-    color: #335da3;
+    color: #2086ae;
     width: 2rem;
     height: 2rem;
   }
@@ -1607,7 +1607,7 @@
     .DataSlider_item_icon__RiXS4 {
     width: 2rem;
     height: 2rem;
-    color: #335da3;
+    color: #2086ae;
   }
   .DataSlider_carousel__item__ZQ388.DataSlider_mode_figures__oG778
     .DataSlider_item-6__3ubnn {
@@ -1644,7 +1644,7 @@
     .DataSlider_item-6__3ubnn
     .DataSlider_innerWrapper__n2vOl
     .DataSlider_secondary_title_under__UHwRr {
-    color: #335da3;
+    color: #2086ae;
     font: var(--font-lead-small);
   }
   .DataSlider_carousel__item__ZQ388.DataSlider_mode_figures__oG778
@@ -1929,7 +1929,7 @@
     .DataSlider_item-1___KvlH
     .DataSlider_innerWrapper__n2vOl
     .DataSlider_secondary_title_under__UHwRr {
-    color: #335da3;
+    color: #2086ae;
     font: var(--font-lead-small);
   }
   .DataSlider_carousel__item__ZQ388.DataSlider_inland_operations_figures__2V3I9
@@ -2037,7 +2037,7 @@
     .DataSlider_item-3__9t1Om
     .DataSlider_innerWrapper__n2vOl
     .DataSlider_secondary_title_under__UHwRr {
-    color: #335da3;
+    color: #2086ae;
     font: var(--font-lead-small);
   }
   .DataSlider_carousel__item__ZQ388.DataSlider_inland_operations_figures__2V3I9
