--- a/src/app/components/Careers/UspGrid/uspGrid.module.css
+++ b/src/app/components/Careers/UspGrid/uspGrid.module.css
@@ -252,7 +252,7 @@
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_blue__7_7dR:hover {
-    background-color: #335da3;
+    background-color: #2086ae;
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_white__IUGF0 {
