--- a/src/app/components/Home/Blog/blog.module.css
+++ b/src/app/components/Home/Blog/blog.module.css
@@ -315,7 +315,7 @@
     transform: rotate(180deg);
   }
   .BlogCarousel_emblabutton__t5aLE:hover {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .BlogCarousel_emblabutton__t5aLE:active {
     background-color: #00235d;
@@ -722,7 +722,7 @@
     color: #fff;
   }
   .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL:active,
   .Button_primary__b__QL:focus {
