--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -92,7 +92,7 @@
 .UspItem_lineWrapper__CaFPf {
     width: 100%;
     height: 0.125rem;
-    background-color: #335da3;
+    background-color: #2086ae;
     margin-top: 2rem;
     transition: background-color 0.3s ease-out;
 }
