--- a/src/app/components/Home/contact/contactBlock.module.css
+++ b/src/app/components/Home/contact/contactBlock.module.css
@@ -433,7 +433,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    color: #335da3;
+    color: #2086ae;
     gap: 0.375rem;
   }
   .ContactBlock_checkboxWrapper__IkIre .ContactBlock_checkbox__8J8ke {
