--- a/src/app/components/Services/Stepper_section/stepperSection.module.css
+++ b/src/app/components/Services/Stepper_section/stepperSection.module.css
@@ -242,7 +242,7 @@
 }
 .StepperCarousel_carouselButtonWrapper__t20mg
   .StepperCarousel_emblabutton__V3jp7:hover {
-  background-color: #335da3;
+  background-color: #2086ae;
 }
 .StepperCarousel_carouselButtonWrapper__t20mg
   .StepperCarousel_emblabutton__V3jp7:disabled {
@@ -600,7 +600,7 @@
   transform: rotate(180deg);
 }
 .BlogCarousel_emblabutton__t5aLE:hover {
-  background-color: #335da3;
+  background-color: #2086ae;
 }
 .BlogCarousel_emblabutton__t5aLE:active {
   background-color: #00235d;
