--- a/src/app/components/About/locationSearch/location.module.css
+++ b/src/app/components/About/locationSearch/location.module.css
@@ -171,7 +171,7 @@
     font-family:'Exo',sans-serif;
     font-size: 3rem;
     font-weight: 400;
-    color: #335da3;
+    color: #2086ae;
     text-transform: uppercase;
   }
   .gold .Modal_title__rsbVJ {
@@ -190,7 +190,7 @@
     gap: 1rem;
   }
   .Modal_icon__eN6oP {
-    background-color: #335da3;
+    background-color: #2086ae;
     color: #fff;
     border-radius: 100%;
     display: flex;
