--- a/src/app/components/Home/CrossLink/crosslink.module.css
+++ b/src/app/components/Home/CrossLink/crosslink.module.css
@@ -398,7 +398,7 @@
   color: #fff;
 }
 .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-  background-color: #335da3;
+  background-color: #2086ae;
 }
 .Button_primary__b__QL:active,
 .Button_primary__b__QL:focus {
@@ -616,14 +616,14 @@
   color: #fff;
 }
 .Button_secondary__8ZLTI:hover .Button_icon__Rt_Hz {
-  background-color: #335da3;
+  background-color: #2086ae;
 }
 .Button_secondary__8ZLTI:hover .Button_icon__Rt_Hz .icon {
   color: #fff;
 }
 .Button_secondary__8ZLTI:active,
 .Button_secondary__8ZLTI:focus {
-  color: #335da3;
+  color: #2086ae;
 }
 .Button_secondary__8ZLTI:active .Button_titleWrapper__Glw9g,
 .Button_secondary__8ZLTI:focus .Button_titleWrapper__Glw9g {
@@ -843,7 +843,7 @@
   transform: translateX(-0.5rem);
 }
 .Button_tertiary__JUfBS:hover .Button_icon__Rt_Hz {
-  background-color: #335da3;
+  background-color: #2086ae;
   transform: translateX(0.5rem);
 }
 .Button_tertiary__JUfBS:active .Button_icon__Rt_Hz,
