--- a/src/app/components/Home/Job/job.module.css
+++ b/src/app/components/Home/Job/job.module.css
@@ -166,7 +166,7 @@
 }
 
 .JobsCard_dateWrapper__HB3DM {
-    color: #335da3;
+    color: #2086ae;
     font: var(--font-body-small);
     display: flex;
     align-items: center;
@@ -591,7 +591,7 @@
     color: #fff;
   }
   .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL:active,
   .Button_primary__b__QL:focus {
@@ -810,14 +810,14 @@
     color: #fff;
   }
   .Button_secondary__8ZLTI:hover .Button_icon__Rt_Hz {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .Button_secondary__8ZLTI:hover .Button_icon__Rt_Hz .icon {
     color: #fff;
   }
   .Button_secondary__8ZLTI:active,
   .Button_secondary__8ZLTI:focus {
-    color: #335da3;
+    color: #2086ae;
   }
   .Button_secondary__8ZLTI:active .Button_titleWrapper__Glw9g,
   .Button_secondary__8ZLTI:focus .Button_titleWrapper__Glw9g {
