--- a/src/app/components/Home/location/location.module.css
+++ b/src/app/components/Home/location/location.module.css
@@ -468,7 +468,7 @@
     color: #fff;
   }
   .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL:active,
   .Button_primary__b__QL:focus {
