--- a/src/app/components/LoadingScreen/loadingScreen.module.css
+++ b/src/app/components/LoadingScreen/loadingScreen.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #335da3;
+  background-color: #2086ae;
   display: flex;
   align-items: center;
   justify-content: center;
