--- a/src/app/components/contact/Form/form.module.css
+++ b/src/app/components/contact/Form/form.module.css
@@ -268,7 +268,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    color: #335da3;
+    color: #2086ae;
     gap: 0.25rem;
   }
   .ContactForm_checkboxWrapper__aSMyg .ContactForm_checkbox___UKEv {
@@ -436,7 +436,7 @@
     color: #fff;
   }
   .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-    background-color: #335da3;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL:active,
   .Button_primary__b__QL:focus {
