--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1176,7 +1176,7 @@ p i {
 
 p a:not(.button) {
     text-decoration: underline;
-    color: #335da3;
+    color: #2086ae;
 }
 
 .gold p a:not(.button) {
@@ -1201,7 +1201,7 @@ ul:not(.tabs) li {
 }
 
 ul:not(.tabs) li::marker {
-    color: #335da3;
+    color: #2086ae;
 }
 
 .gold ul:not(.tabs) li::marker {
@@ -1218,7 +1218,7 @@ ol:not(.tabs) li {
 }
 
 ol:not(.tabs) li::marker {
-    color: #335da3;
+    color: #2086ae;
 }
 
 button,
@@ -1306,7 +1306,7 @@ strong {
 
 .prose a:not(.button) {
     text-decoration: underline;
-    color: #335da3;
+    color: #2086ae;
 }
 
 .prose hr {
@@ -1374,7 +1374,7 @@ strong {
 }
 
 .prose ul:not(.tabs) li::marker {
-    color: #335da3;
+    color: #2086ae;
 }
 
 .gold .prose ul:not(.tabs) li::marker {
@@ -1407,7 +1407,7 @@ strong {
 }
 
 .prose ol:not(.tabs) li::marker {
-    color: #335da3;
+    color: #2086ae;
 }
 
 .prose ol:not(.tabs),
