--- a/src/app/components/Careers/UspGrid/uspGrid.module.css
+++ b/src/app/components/Careers/UspGrid/uspGrid.module.css
@@ -30,7 +30,7 @@
 
 .UspGrid_section__49ZWe.UspGrid_dark__siSfE {
     border-top-left-radius: 2.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .UspGrid_section__49ZWe.UspGrid_dark__siSfE .UspGrid_titleWrapper__yGpjk {
@@ -227,7 +227,7 @@
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_blue__7_7dR {
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .UspTextCard_title__HNRuM {
@@ -260,7 +260,7 @@
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_white__IUGF0 .UspTextCard_title__HNRuM {
-    color: #00358d;
+    color: #2086ae;
 }
 
 .UspTextCard_card__eKAuC.UspTextCard_white__IUGF0 .UspTextCard_info__KyRMi {
@@ -478,7 +478,7 @@
 
 .UspGrid_section__49ZWe.UspGrid_dark__siSfE {
     border-top-left-radius: 2.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .UspGrid_section__49ZWe.UspGrid_dark__siSfE .UspGrid_titleWrapper__yGpjk {
