--- a/src/app/components/Home/About/about.module.css
+++ b/src/app/components/Home/About/about.module.css
@@ -518,7 +518,7 @@
 
 .AboutBlock_cardtitle__zemEt {
   margin-bottom: 0.5rem;
-  color: #00358d;
+  color: #2086ae;
   font: 700 1.5rem/2rem var(--schibsted_Grotesk);
 }
 
@@ -551,7 +551,7 @@
 }
 
 .AboutBlock_iconWrapper__JivBc .AboutBlock_icon__lsHnW {
-  color: #00358d;
+  color: #2086ae;
 }
 
 .Icon_icon___Kgo7 {
@@ -635,7 +635,7 @@
   transition: all 0.3s ease-out;
 }
 .Button_primary__b__QL {
-  color: #00358d;
+  color: #2086ae;
   border: 0.0625rem solid #99aed1;
   border-radius: 2rem;
   padding: 0.5rem;
@@ -644,14 +644,14 @@
 }
 .Button_primary__b__QL .Button_titleWrapper__Glw9g {
   margin: 0 1rem;
-  color: #00358d;
+  color: #2086ae;
 }
 .Button_primary__b__QL.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
   margin: 0 0 0 1.5rem;
 }
 .Button_primary__b__QL .Button_icon__Rt_Hz {
   padding: 0.5rem;
-  background-color: #00358d;
+  background-color: #2086ae;
   height: 100%;
   overflow: hidden;
   min-height: 2.5rem;
@@ -715,7 +715,7 @@
 .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:active .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-  background-color: #00358d;
+  background-color: #2086ae;
 }
 .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
 .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
