--- a/src/app/components/Home/CrossLink/crosslink.module.css
+++ b/src/app/components/Home/CrossLink/crosslink.module.css
@@ -192,7 +192,7 @@
 }
 
 .CrosslinkBlock_crosslinkCard__SCoir:first-child .CrosslinkBlock_title__hlDQO {
-  color: #00358d;
+  color: #2086ae;
 }
 
 .CrosslinkBlock_crosslinkCard__SCoir:first-child .CrosslinkBlock_info__hYdqG {
@@ -361,7 +361,7 @@
   transition: all 0.3s ease-out;
 }
 .Button_primary__b__QL {
-  color: #00358d;
+  color: #2086ae;
   border: 0.0625rem solid #99aed1;
   border-radius: 2rem;
   padding: 0.5rem;
@@ -370,14 +370,14 @@
 }
 .Button_primary__b__QL .Button_titleWrapper__Glw9g {
   margin: 0 1rem;
-  color: #00358d;
+  color: #2086ae;
 }
 .Button_primary__b__QL.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
   margin: 0 0 0 1.5rem;
 }
 .Button_primary__b__QL .Button_icon__Rt_Hz {
   padding: 0.5rem;
-  background-color: #00358d;
+  background-color: #2086ae;
   height: 100%;
   overflow: hidden;
   min-height: 2.5rem;
@@ -441,7 +441,7 @@
 .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:active .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-  background-color: #00358d;
+  background-color: #2086ae;
 }
 .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
 .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
@@ -591,14 +591,14 @@
 }
 .Button_secondary__8ZLTI .Button_titleWrapper__Glw9g {
   margin: 0 1rem;
-  color: #00358d;
+  color: #2086ae;
 }
 .Button_secondary__8ZLTI.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
   margin: 0;
 }
 .Button_secondary__8ZLTI .Button_icon__Rt_Hz {
   padding: 0.5rem;
-  background-color: #00358d;
+  background-color: #2086ae;
   height: 100%;
   min-height: 2.5rem;
   min-width: 2.5rem;
@@ -663,7 +663,7 @@
 .Button_secondary__8ZLTI.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz,
 .darkmode .Button_secondary__8ZLTI:focus .Button_icon__Rt_Hz {
-  background-color: #00358d;
+  background-color: #2086ae;
 }
 .Button_secondary__8ZLTI.Button_darkmode__ozqJQ:active
   .Button_icon__Rt_Hz
@@ -829,7 +829,7 @@
   height: 3.5rem;
   min-height: 2.5rem;
   border-radius: 50%;
-  background-color: #00358d;
+  background-color: #2086ae;
   transition: all 0.3s ease-out;
 }
 .Button_tertiary__JUfBS .Button_icon__Rt_Hz .icon {
@@ -866,7 +866,7 @@
 .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_tertiary__JUfBS:active .Button_icon__Rt_Hz,
 .darkmode .Button_tertiary__JUfBS:focus .Button_icon__Rt_Hz {
-  background-color: #00358d;
+  background-color: #2086ae;
 }
 .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
 .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
