--- a/src/app/components/Home/Section/section.module.css
+++ b/src/app/components/Home/Section/section.module.css
@@ -562,7 +562,7 @@
 }
 
 .Button_primary__b__QL {
-    color: #00358d;
+    color: #2086ae;
     border: 0.0625rem solid #99aed1;
     border-radius: 2rem;
     padding: 0.5rem;
@@ -572,7 +572,7 @@
 
 .Button_primary__b__QL .Button_titleWrapper__Glw9g {
     margin: 0 1rem;
-    color: #00358d;
+    color: #2086ae;
 }
 
 .Button_primary__b__QL.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
@@ -584,7 +584,7 @@
 
 .Button_primary__b__QL .Button_icon__Rt_Hz {
     padding: 0.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
     height: 100%;
     overflow: hidden;
     min-height: 2.5rem;
@@ -661,7 +661,7 @@
 .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:active .Button_icon__Rt_Hz,
 .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
@@ -884,7 +884,7 @@
 .Button_secondary__8ZLTI.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
 .darkmode .Button_secondary__8ZLTI:active .Button_icon__Rt_Hz,
 .darkmode .Button_secondary__8ZLTI:focus .Button_icon__Rt_Hz {
-  background-color: #00358d;
+  background-color: #2086ae;
 }
 .Button_secondary__8ZLTI.Button_darkmode__ozqJQ:active
   .Button_icon__Rt_Hz
@@ -991,7 +991,7 @@
     height: 3.5rem;
     min-height: 2.5rem;
     border-radius: 50%;
-    background-color: #00358d;
+    background-color: #2086ae;
     transition: all 0.3s ease-out;
   }
   .Button_tertiary__JUfBS .Button_icon__Rt_Hz .icon {
@@ -1028,7 +1028,7 @@
   .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
   .darkmode .Button_tertiary__JUfBS:active .Button_icon__Rt_Hz,
   .darkmode .Button_tertiary__JUfBS:focus .Button_icon__Rt_Hz {
-    background-color: #00358d;
+    background-color: #2086ae;
   }
   .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
   .Button_tertiary__JUfBS.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
@@ -1051,7 +1051,7 @@
 }
 .Button_primary__b__QL .Button_titleWrapper__Glw9g {
     margin: 0 1rem;
-    color: #00358d;
+    color: #2086ae;
   }
 
   .Button_icon__Rt_Hz .icon,
