--- a/src/app/components/Home/UpsBlock/upsBlock.module.css
+++ b/src/app/components/Home/UpsBlock/upsBlock.module.css
@@ -61,7 +61,7 @@
 }
 
 .UspItem_uspItemTitle__pyK16.UspItem_light__BSdNE {
-    color: #00358d;
+    color: #2086ae;
 }
 
 .UspItem_uspItemText__6aUpv {
@@ -114,7 +114,7 @@
 }
 
 .UspItem_light__BSdNE .UspItem_line__xiQ1n {
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .gold .UspItem_line__xiQ1n {
@@ -158,7 +158,7 @@
 
 .UspBlock_section__SSpPU.UspBlock_dark__576q1 {
     border-top-left-radius: 4.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .UspBlock_section__SSpPU.UspBlock_dark__576q1 .UspBlock_titleWrapper__0bZaZ {
@@ -244,7 +244,7 @@
     grid-gap: 0.5rem;
     gap: 0.5rem;
     align-items: flex-start;
-    color: #00358d;
+    color: #2086ae;
     transition: color 0.3s ease-out;
     z-index: 1;
     grid-gap: 0;
