--- a/src/app/components/Services/ServiceCardBlock/serviceCard.module.css
+++ b/src/app/components/Services/ServiceCardBlock/serviceCard.module.css
@@ -177,7 +177,7 @@
   }
   .ServiceCardsBlock_cardtitle__nQ_eN {
     margin-bottom: 0.5rem;
-    color: #00358d;
+    color: #2086ae;
     font: 700 1.5rem/2rem var(--schibsted_Grotesk);
     position: relative;
     z-index: 5;
@@ -209,5 +209,5 @@
     z-index: 4;
   }
   .ServiceCardsBlock_iconWrapper__qHFqZ .ServiceCardsBlock_icon__PArdM {
-    color: #00358d;
+    color: #2086ae;
   }
