--- a/src/app/components/Services/verticalSlider/verticalSlider.module.css
+++ b/src/app/components/Services/verticalSlider/verticalSlider.module.css
@@ -301,7 +301,7 @@
   }
   .ServiceSlider_dot__mQNgg.ServiceSlider_active___VK5E {
     opacity: 1;
-    background-color: #00358d;
+    background-color: #2086ae;
     transform: scale(1.5);
   }
   .gold .ServiceSlider_dot__mQNgg.ServiceSlider_active___VK5E {
@@ -448,7 +448,7 @@
   }
   .ServiceCarousel_dot___ME3W.ServiceCarousel_selected__yVkxm {
     transition: background-color 0.3s ease-in-out;
-    background-color: #00358d;
+    background-color: #2086ae;
     width: 0.75rem;
     opacity: 1;
     height: 0.75rem;
@@ -563,7 +563,7 @@
     transition: all 0.3s ease-out;
   }
   .Button_primary__b__QL {
-    color: #00358d;
+    color: #2086ae;
     border: 0.0625rem solid #99aed1;
     border-radius: 3rem;
     padding: 0.5rem;
@@ -572,14 +572,14 @@
   }
   .Button_primary__b__QL .Button_titleWrapper__Glw9g {
     margin: 0 1rem;
-    color: #00358d;
+    color: #2086ae;
   }
   .Button_primary__b__QL.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
     margin: 0 0 0 1.5rem;
   }
   .Button_primary__b__QL .Button_icon__Rt_Hz {
     padding: 0.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
     height: 100%;
     overflow: hidden;
     min-height: 2.5rem;
@@ -643,7 +643,7 @@
   .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
   .darkmode .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00358d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
   .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
