--- a/src/app/components/About/ContentBox/contentbox.module.css
+++ b/src/app/components/About/ContentBox/contentbox.module.css
@@ -225,7 +225,7 @@
     opacity: 0.16;
     width: 100%;
     height: 100%;
-    background-color: #00358d;
+    background-color: #2086ae;
     pointer-events: none;
   }
   @media (min-width: 48em) {
