--- a/src/app/components/Home/footer/footer.module.css
+++ b/src/app/components/Home/footer/footer.module.css
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color: #00358d;
+  background-color: #2086ae;
   padding: 4rem 0 2.5rem;
   position: relative;
   gap: 6rem;
