--- a/src/app/components/Home/hero/hero.module.css
+++ b/src/app/components/Home/hero/hero.module.css
@@ -1069,7 +1069,7 @@
 }
 
 .VideoBlock_emblabutton__d4G1X:active {
-    background-color: #00358d;
+    background-color: #2086ae;
     color: #fff;
     transition: scale 0.1s ease-out;
     transform: scale(0.9);
