--- a/src/app/components/Home/location/location.module.css
+++ b/src/app/components/Home/location/location.module.css
@@ -81,7 +81,7 @@
     width: 4.375rem;
     height: 4.375rem;
     border-radius: 1.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -99,7 +99,7 @@
     opacity: 0.1;
     height: 100%;
     border-radius: 1.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
     z-index: 3;
 }
 
@@ -112,7 +112,7 @@
     left: 0;
     z-index: 2;
     opacity: 0.1;
-    background-color: #00358d;
+    background-color: #2086ae;
 }
 
 .LocationsSlider_location__x6NQX .LocationsSlider_svg__6TBtR {
@@ -280,7 +280,7 @@
 
 .LocationBlock_title__OoA2u {
     grid-column: span 4;
-    color: #00358d;
+    color: #2086ae;
     font-family: 'SchibstedGrotesk', sans-serif; /* Apply custom font */
     text-transform: uppercase;
 }
@@ -431,7 +431,7 @@
     transition: all 0.3s ease-out;
   }
   .Button_primary__b__QL {
-    color: #00358d;
+    color: #2086ae;
     border: 0.0625rem solid #99aed1;
     border-radius: 2rem;
     padding: 0.5rem;
@@ -440,14 +440,14 @@
   }
   .Button_primary__b__QL .Button_titleWrapper__Glw9g {
     margin: 0 1rem;
-    color: #00358d;
+    color: #2086ae;
   }
   .Button_primary__b__QL.Button_iconButton__fsKFn .Button_titleWrapper__Glw9g {
     margin: 0 0 0 1.5rem;
   }
   .Button_primary__b__QL .Button_icon__Rt_Hz {
     padding: 0.5rem;
-    background-color: #00358d;
+    background-color: #2086ae;
     height: 100%;
     overflow: hidden;
     min-height: 2.5rem;
@@ -511,7 +511,7 @@
   .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz,
   .darkmode .Button_primary__b__QL:active .Button_icon__Rt_Hz,
   .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-    background-color: #00358d;
+    background-color: #2086ae;
   }
   .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz .icon,
   .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz .icon,
